prover-ray/zkcdriver/testdata/synced/invalid/rem_05.zkc
//error:3:11-12:expected type u8
fn f(x:u8, y:u4) -> (r:u8) {
  r = x % y
  return
}
